--- a/styles/style.scss
+++ b/styles/style.scss
@@ -240,8 +240,28 @@ body {
 	}
 
 	p {
-		padding-top: 10px;
-		padding-bottom: 10px;
+		padding: 10px;
+	}
+}
+
+@media screen and (max-width: 1024px) {
+	.testimonial-section-text h2 {
+		padding-top: 20px;
+	}
+}
+
+@media screen and (max-width: 640px) {
+	.blog-section-text h2 {
+		padding-top: 0px;
+	}
+	.testimonial-section-text h2 {
+		padding-left: 50px;
+		padding-right: 50px;
+		padding-top: 40px;
+	}
+
+	.testimonial-section .testimonial-section-text {
+		padding-bottom: 40px;
 	}
 }
 
