--- a/styles/style.scss
+++ b/styles/style.scss
@@ -9,6 +9,9 @@
 	box-sizing: border-box;
 }
 
+// THEME VARIABLES
+$themeColor: #edc420;
+
 body {
 	overflow-x: hidden;
 	display: flex;
@@ -20,6 +23,10 @@ body {
 	margin: 0;
 	height: 100%;
 	font-family: "roboto", sans-serif;
+}
+
+.underlineTheme {
+	border-bottom: 2px solid $themeColor;
 }
 
 @media (min-width: 1200px) {
@@ -94,7 +101,7 @@ body {
 }
 
 .btn:hover {
-	color: #212529 !important;
+	color: $themeColor !important;
 	text-decoration: none !important;
 }
 
@@ -144,9 +151,10 @@ body {
 	width: 100%;
 	height: 150px;
 	font-family: "Josefin Sans", sans-serif;
-	background-color: #d3d3d3;
+	background-color: #f5f5f5;
 	font-size: 15px;
 	padding-top: 10px;
+	border-top: 1px solid $themeColor;
 }
 
 .social-icon {
@@ -169,34 +177,54 @@ body {
 // === FOOTER END ===
 
 // HOME IMAGE SECTION START
+// #hero-image {
+// 	background-image: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.4)),
+// 		url(https://wallpaperaccess.com/full/1108004.jpg);
+// 	width: 100%;
+// 	background-position: center;
+// 	background-repeat: no-repeat;
+// 	background-size: cover;
+// 	height: 500px;
+// }
+
 #hero-image {
-	background-image: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.4)),
-		url(https://wallpaperaccess.com/full/1108004.jpg);
 	width: 100%;
-	background-position: center;
-	background-repeat: no-repeat;
-	background-size: cover;
-	height: 500px;
+	height: 450px;
+	
+	video {
+		width: 100%;
+		height: 100%;
+		object-fit: cover;
+	}
+
+	.overlay {
+		position: absolute;
+		top: 0%;
+		left: 0%;
+		right: 0%;
+		bottom: 0%;
+		background-color: rgba(0,0,0,0.7);
+	}
+
+	#hero-text {
+		position: absolute;
+		top: 50%;
+		left: 50%;
+		transform: translate(-50%, -50%);
+		color: #fff;
+}
 }
 
-#hero-text {
-	align-items: center;
-	justify-content: center;
-	position: relative;
-	text-align: center;
-	padding-top: 200px;
-	padding-bottom: 200px;
-	color: #fff3d9;
-}
+
 
 .shop-hampers-button {
-	background: black !important;
-	color: white !important;
-	min-width: 260px !important;
+	background: #fff !important; 
+	color: #000 !important;
+	transition: 0.5s;
 
 	&:hover {
 		background: #222 !important;
-		color: white !important;
+		color: $themeColor !important;
 	}
 }
 // HOME IMAGE SECTION END
@@ -207,7 +235,7 @@ body {
 }
 
 .blog-section-text {
-	background-color: #b3c0ae;
+	background-color: #ffdccb;
 
 	h2 {
 		padding-top: 100px;
@@ -227,7 +255,7 @@ body {
 
 	&:hover {
 		background: #222 !important;
-		color: white !important;
+		color: $themeColor !important;
 	}
 }
 
@@ -295,7 +323,7 @@ body {
 
 	&:hover {
 		background: #222 !important;
-		color: white !important;
+		color: $themeColor !important;
 	}
 }
 @media (max-width: 991px) {
