--- a/styles/style.css
+++ b/styles/style.css
@@ -45,9 +45,13 @@ body {
 .logo-styling {
   font-family: "Josefin Sans", sans-serif;
   font-weight: bold;
-  font-size: 40px;
-  color: #3b0918;
+  font-size: 22px;
+  color: #000;
   text-transform: uppercase;
+}
+
+.logo-styling:hover {
+  color: #000;
 }
 
 .main-link {
@@ -119,7 +123,7 @@ body {
 
 @media (min-width: 992px) {
   .logo-styling {
-    font-size: 30px;
+    font-size: 22px;
   }
 }
 
@@ -147,16 +151,24 @@ body {
   width: 100%;
   height: 150px;
   font-family: "Josefin Sans", sans-serif;
-  background-color: #f5f5f5;
   font-size: 15px;
   padding-top: 10px;
   border-top: 1px solid #edc420;
 }
 
 .social-icon {
-  color: #3b0918;
+  color: #000;
   padding: 10px;
-  font-size: 20px;
+  background-color: rgba(0, 0, 0, 0.1);
+  border-radius: 6px;
+  font-size: 22px;
+  -webkit-transition: 0.6s;
+  transition: 0.6s;
+}
+
+.social-icon:hover {
+  color: #ffcc00;
+  background-color: rgba(237, 196, 32, 0.3);
 }
 
 .footer-icons {
@@ -169,6 +181,8 @@ body {
 
 .footer-links:hover {
   color: #821536;
+  -webkit-text-decoration: underline #edc420;
+          text-decoration: underline #edc420;
 }
 
 #hero-image {
