--- a/styles/style.scss
+++ b/styles/style.scss
@@ -48,9 +48,13 @@ body {
 .logo-styling {
   font-family: "Josefin Sans", sans-serif;
   font-weight: bold;
-  font-size: 40px;
-  color: #3b0918;
+  font-size: 22px;
+  color: #000;
   text-transform: uppercase;
+  
+  &:hover {
+    color: #000;
+  }
 }
 
 .main-link {
@@ -115,7 +119,7 @@ body {
 
 @media (min-width: 992px) {
   .logo-styling {
-    font-size: 30px;
+    font-size: 22px;
   }
 }
 
@@ -148,27 +152,34 @@ body {
   width: 100%;
   height: 150px;
   font-family: "Josefin Sans", sans-serif;
-  background-color: #f5f5f5;
   font-size: 15px;
   padding-top: 10px;
   border-top: 1px solid $themeColor;
 }
 
 .social-icon {
-  color: #3b0918;
+  color: #000;
   padding: 10px;
-  font-size: 20px;
+  background-color: rgba(0, 0, 0, 0.1);
+  border-radius: 6px;
+  font-size: 22px;
+  transition: 0.6s;
+
+  &:hover {
+    color: rgb(255, 204, 0);
+    background-color: rgba(237, 196, 32, 0.3);
+  }
 }
 
 .footer-icons {
-  color: #3b0918;
-}
+  color: #3b0918;}
 
 .footer-links {
   color: #3b0918;
 
   &:hover {
     color: #821536;
+    text-decoration: underline $themeColor;
   }
 }
 // === FOOTER END ===
