--- a/styles/style.scss
+++ b/styles/style.scss
@@ -423,6 +423,13 @@ body {
 }
 // 	BAG SECTION END
 
+// 	CHECKOUT SECTION START
+#payment-form .form-control, #card-element {
+    color: #000;
+    border: 1px solid #000;
+}
+// 	CHECKOUT SECTION END
+
 
 
 /*--------------------------------------------------------------
