--- a/styles/style.scss
+++ b/styles/style.scss
@@ -430,6 +430,13 @@ body {
 }
 // 	CHECKOUT SECTION END
 
+// 	PRODUCT EDIT START
+a.category-badge > span.badge:hover {
+    background: #212529 !important;
+    color: #fff !important;
+}
+// 	PRODUCT EDIT END
+
 
 
 /*--------------------------------------------------------------
